fix edit room popup on mobile

--- a/application/src/main/webapp/css/chatMobile.less
+++ b/application/src/main/webapp/css/chatMobile.less
@@ -8,6 +8,7 @@
   }
   .uiLeftContainerArea {
     left: 0;
+    z-index: 1;
   }
   .uiGlobalRoomsContainer, .uiRoomUsersContainerArea {
     left: 100%;
